feat: chat and notification